objects/Vertical_RVP_Mapping_CS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>RVP_Name__c</fullName>
        <label>RVP Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_UserId__c</fullName>
        <label>RVP UserId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Vertical RVP Mapping</label>
</CustomObject>